--- a/src/index.hbs
+++ b/src/index.hbs
@@ -4,8 +4,6 @@
     <title>Mortgage calc</title>
   </head>
   <body>
-    <div id='root'>
-    </div>
-    <script src="/static/bundle.js"></script>
+    <div id="root"></div>
   </body>
 </html>
